--- a/index.qmd
+++ b/index.qmd
@@ -72,7 +72,28 @@ git add .
 git commit -m "add code"</code></pre>
 ```
 
+## Import survey
+
+It's possible to import survey questions containing code blocks to Qualtrics using a simple `.txt`-file.
+For details on survey import from `.txt`-files, see [this section of the Qualtrics Support](https://www.qualtrics.com/support/survey-platform/survey-module/survey-tools/import-and-export-surveys/#PreparingAnAdvancedFormatTXTFile).
+
+```{console, filename="survey-code-block.txt"}
+#| file: survey-code-block.txt
+#| eval: false
+#| code-line-numbers: true
+```
+
+<details>
+<summary>Click here to view an example for an advanced survey by Qualtrics (`survey.txt`).</summary>
+```{console, filename="survey.txt"}
+#| file: survey.txt
+#| eval: false
+#| code-line-numbers: true
+```
+</details>
+
 ## References
 
 - [Qualtrics Community: Linking a custom CSS file to a survey](https://community.qualtrics.com/custom-code-12/how-do-i-link-my-custom-css-file-in-the-file-library-to-a-survey-13491)
 - [Qualtrics Support: Adding a Survey Header/Footer](https://www.qualtrics.com/support/survey-platform/survey-module/look-feel/general-look-feel-settings/#AddFooterHeader)
+- [Qualtrics Support: Preparing an Advanced Format TXT or DOCX File](https://www.qualtrics.com/support/survey-platform/survey-module/survey-tools/import-and-export-surveys/#PreparingAnAdvancedFormatTXTFile)
